--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular": "1.5.10",
     "angular-route": "1.5.10",
+    "angular-resource": "1.5.10",
     "lodash": "^4.17.4"
   }
 }
