--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "angular": "1.5.10",
     "angular-route": "1.5.10",
-    "angular-resource": "1.5.10",
-    "lodash": "^4.17.4"
+    "angular-resource": "1.5.10"
   }
 }
